--- a/链表问题总结.md
+++ b/链表问题总结.md
@@ -1,19 +1,23 @@
 #《《链表问题总结》》
-##输出单链表倒数第K个结点
+---
+#输出单链表倒数第K个结点
 两次遍历：
 - O(n*n)
 - 简单但效率低下
 
 递归法：
-- 使用递归遍历至末尾，由末尾开始返回，每返回一次num-1,当num为0时，即目标结点
 - O(n*n)
--	
+- 使用递归遍历至末尾，由末尾开始返回，每返回一次num-1,当num为0时，即目标结点
 
 双指针法：
+<br>
 （1）定义两个指针 p1 和 p2 分别指向链表头节点。
 （2）p1 前进 K 个节点，则 p1 与 p2 相距 K 个节点。
 （3）p1，p2 同时前进，每次前进 1 个节点。
 （4）当 p1 指向到达链表末尾，由于 p1 与 p2 相距 K 个节点，则 p2 指向目标节点
+<br>
+- O(n)
+- [示例:输出单链表倒数第K个结点](https://github.com/t-dawei/leetcode/blob/master/code/19.%20删除链表的倒数第N个节点.py)
 
 ===
 # 判断链表是否有环
