--- a/链表问题总结.md
+++ b/链表问题总结.md
@@ -1,6 +1,7 @@
-#《《链表问题总结》》
+《链表问题总结》
+
 ---
-#输出单链表倒数第K个结点
+# 输出单链表倒数第K个结点
 两次遍历：
 - O(n*n)
 - 简单但效率低下
@@ -19,7 +20,7 @@
 - O(n)
 - [示例:输出单链表倒数第K个结点](https://github.com/t-dawei/leetcode/blob/master/code/19.%20删除链表的倒数第N个节点.py)
 
-===
+---
 # 判断链表是否有环
 穷举比较法：
 - O(n^2)
