--- a/链表问题总结.md
+++ b/链表问题总结.md
@@ -154,6 +154,7 @@ int getLoopLength(ListNode* head){
 若要删除节点 3 。第一步将节点3的下一个节点的值4赋值给当前节点。变成 1->2->4->4->NULL，然后将就 4 这个结点删除，就达到目的了。 1->2->4->NULL
 <br>
 代码：
+<br>
 ```
 void deleteNode(ListNode **pHead, ListNode* pDelNode) {
         if(pDelNode == NULL)
@@ -209,7 +210,7 @@ public:
 ```
 ---
 
-# 反转链表
+# [9]反转链表
 思路：
 <br>
 设置三个节点pre、cur、next<br>
